fix some absolute paths

--- a/Tools/T.html
+++ b/Tools/T.html
@@ -70,14 +70,14 @@ document [imgName].src = img2;
           </tr>
           <tr>
           <td width="193" height="10"> <font face="Comic Sans MS" size="4"><i>
-          <a href="http://www.or.deis.unibo.it/staff_pages/martello/BppGame-1.3.2.zip">
+          <a href="../BppGame-1.3.2.zip">
           <span lang="en-us"><font color="#0000FF">Bin Packing Problem</font></span></a></i></font> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
 &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
-                  Instructions for use at <a href="http://or.dei.unibo.it/library/bpplib"><font color="#0000FF">http://or.dei.unibo.it/library/bpplib</font></a></td>
+                  Instructions for use at <a href="https://site.unibo.it/operations-research/en/research/bpplib-a-bin-packing-problem-library"><font color="#0000FF">https://site.unibo.it/operations-research/en/research/bpplib-a-bin-packing-problem-library</font></a></td>
           </tr>
           <tr>
           <td width="193" height="10"> <font face="Comic Sans MS" size="4"><i>
-          <a href="http://www.or.deis.unibo.it/staff_pages/martello/TwoBinGame and Manager-3.0.rar">
+          <a href="../TwoBinGame and Manager-3.0.rar">
           <span lang="en-us"><font color="#0000FF">Two Dimensional Packing Problems</font></span></a></i></font> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
                   Instructions for use at <a href="http://gianlucacosta.info/TwoBinPack/"><font color="#0000FF">http://gianlucacosta.info/TwoBinPack/</font></a></td>
           </tr>
