--- a/Graphs.html
+++ b/Graphs.html
@@ -56,7 +56,7 @@ document [imgName].src = img2;
   href="GraphsJ3/GraphsJ3.htm"><span
   class=SpellE><span style='font-size:20.5pt;font-family:"Comic Sans MS";
   color:black'>GraphsJ</span></span><span style='font-size:20.5pt;font-family:
-  "Comic Sans MS";color:black'> 3 – A modern didactic application for graph
+  "Comic Sans MS";color:black'> 3 ï¿½ A modern didactic application for graph
   algorithms</span></a>
 
 <P>
@@ -66,7 +66,7 @@ document [imgName].src = img2;
 </P>
 
 <a
-  href="http://www.or.deis.unibo.it/staff_pages/martello/GraphsJ2/GraphsJ2.html"><span
+  href="../GraphsJ2/GraphsJ2.html"><span
   class=SpellE><span style='font-size:20.5pt;font-family:"Comic Sans MS";
   color:blue'>GraphsJ</span></span><span style='font-size:20.5pt;font-family:
   "Comic Sans MS";color:blue'> 2 - Open source Java application for graph
