--- a/Tools/T.html
+++ b/Tools/T.html
@@ -157,7 +157,7 @@ document [imgName].src = img2;
           <td width="193" height="16"> </td>
           <tr>
           <td width="393" height="10"> <font face="Comic Sans MS" size="4"><i>
-          <a href="http://www.or.deis.unibo.it/knapsack.html">
+          <a href="../kp.html">
           <span lang="en-us"><font color="#0000FF">Knapsack Problems</font></span></a></i></font></td>
           </tr>
           </tr>
