--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 <I>Knapsack Problems: Algorithms and Computer Implementations</I></a>, John Wiley &amp; Sons, Chichester&ndash;New York, 1990 (with P. Toth), xii + 296 pages;
 <BR><B><font color="red">over 6000 citations</font></B> on <a href="http://scholar.google.com/citations?hl=en&user=o4a20zsAAAAJ&view_op=list_works" target="_blank">
 Google Scholar</a> (as of December 2022);
-<a href="http://www.or.deis.unibo.it/knapsack.html" target="_blank">
+<a href="kp.html" target="_blank">
 <B>free download</B></a>
 </P></LI>
 <LI
@@ -514,7 +514,7 @@ Boston, 1999 (co-edited with S. Voss, I.H. Osman and C.Roucairol), xii + 511 pag
  align="justify"
 ><a href="http://www.sciencedirect.com/science/journal/03772217/175/3" target="_blank">
 <FONT size="+1">Rich Models in Discrete Optimization: Formulation and Resolution</a>,
-<I>European Journal of Operational Research</I> 175, 3, 2006 (with G. Hasle and A. Løkketangen) </P
+<I>European Journal of Operational Research</I> 175, 3, 2006 (with G. Hasle and A. Lï¿½kketangen) </P
 ></LI
 ><LI
  align="justify"
@@ -572,7 +572,7 @@ Boston, 1999 (co-edited with S. Voss, I.H. Osman and C.Roucairol), xii + 511 pag
 >
 <a href="https://www.sciencedirect.com/journal/discrete-applied-mathematics/vol/242/suppl/C" target="_blank">
 <FONT size="+1">Computational Advances in Combinatorial Optimization</a>,
-<I>Discrete Applied Mathematics</I> 242, 2018 (with T. Jordán and T. Kis) </P
+<I>Discrete Applied Mathematics</I> 242, 2018 (with T. Jordï¿½n and T. Kis) </P
 ></LI>
 
 <LI
@@ -789,19 +789,19 @@ New York, 315 pages.
 
 <P
  align="justify"
->[214] V. Cacchiani, M. Iori, A. Locatelli, S. Martello (2022). Knapsack problems — An overview of recent advances. Part II: Multiple, multidimensional, and quadratic knapsack problems, <I>Computers & Operations Research</I> 143,
+>[214] V. Cacchiani, M. Iori, A. Locatelli, S. Martello (2022). Knapsack problems ï¿½ An overview of recent advances. Part II: Multiple, multidimensional, and quadratic knapsack problems, <I>Computers & Operations Research</I> 143,
 105693.
 </P>
 
 <P
  align="justify"
->[213] V. Cacchiani, M. Iori, A. Locatelli, S. Martello (2022). Knapsack problems — An overview of recent advances. Part I: Single knapsack problems, <I>Computers & Operations Research</I> 143, 105692.
+>[213] V. Cacchiani, M. Iori, A. Locatelli, S. Martello (2022). Knapsack problems ï¿½ An overview of recent advances. Part I: Single knapsack problems, <I>Computers & Operations Research</I> 143, 105692.
 </P>
 
 <P
  align="justify"
 >[212] M. Iori, V.L. de Lima, S. Martello, M. Monaci (2022). 2DPackLib: a two-dimensional cutting and packing
-library, <I>Optimization Letters</I> 16,471–480.
+library, <I>Optimization Letters</I> 16,471ï¿½480.
 </P>
 
 <P
@@ -870,7 +870,7 @@ library, <I>Optimization Letters</I> 16,471–480.
 
 <P
  align="justify"
->[200] S. Martello, M.G. Speranza (2020). <I>Ricerca Operativa per l’Economia e l’Impresa</I> (II Ed.), Esculapio, Bologna,
+>[200] S. Martello, M.G. Speranza (2020). <I>Ricerca Operativa per lï¿½Economia e lï¿½Impresa</I> (II Ed.), Esculapio, Bologna,
 x + 246 pages.
 </P>
 
@@ -918,7 +918,7 @@ assignment problem, <I>Computers &amp Industrial Engineering</I> 125, 98&ndash;1
 
 <P
  align="justify"
->[192] T. Jordán, T. Kis, S. Martello (2018). Computational advances in combinatorial optimization, <I>Discrete Applied Mathematics</I> 242, 1&ndash;3.
+>[192] T. Jordï¿½n, T. Kis, S. Martello (2018). Computational advances in combinatorial optimization, <I>Discrete Applied Mathematics</I> 242, 1&ndash;3.
 </P>
 
 <P
@@ -945,7 +945,7 @@ assignment problem, <I>Computers &amp Industrial Engineering</I> 125, 98&ndash;1
 
 <P
  align="justify"
->[187] T. Jordán, T. Kis, S. Martello (eds.) (2018). <I> Special Issue: Computational Advances in Combinatorial Optimization</I>, <I>Discrete Applied Mathematics</I> 242.
+>[187] T. Jordï¿½n, T. Kis, S. Martello (eds.) (2018). <I> Special Issue: Computational Advances in Combinatorial Optimization</I>, <I>Discrete Applied Mathematics</I> 242.
 </P>
 
 <P
@@ -1052,7 +1052,7 @@ Applied Mathematics</I> 196.
 
 <P
  align="justify"
->[170] A. Borghetti, C. D’Ambrosio, A. Lodi, S. Martello (2015). Optimal scheduling of a multiunit hydro power station in a short-term planning horizon. K.G. Murty, ed., <I>Case Studies in Operations Research</I>.
+>[170] A. Borghetti, C. Dï¿½Ambrosio, A. Lodi, S. Martello (2015). Optimal scheduling of a multiunit hydro power station in a short-term planning horizon. K.G. Murty, ed., <I>Case Studies in Operations Research</I>.
 Springer, New York, 167&ndash;181.
 </P>
 
@@ -1079,7 +1079,7 @@ with interval data. <I>Proceedings IEEE International Conference on Industrial E
 
 <P
  align="justify"
->[166] R. Rovatti, C. D’Ambrosio, A. Lodi, S. Martello (2014). Optimistic MILP modeling of non-linear optimization problems.
+>[166] R. Rovatti, C. Dï¿½Ambrosio, A. Lodi, S. Martello (2014). Optimistic MILP modeling of non-linear optimization problems.
 <I>European Journal of Operational Research</I> 239, 32&ndash;45.
 </P>
 
@@ -1101,7 +1101,7 @@ with interval data. <I>Proceedings IEEE International Conference on Industrial E
 >[163] A. Lodi, S. Martello, M. Monaci, D. Vigo (2014).
 Two-dimensional bin packing problems.
 V. Th. Paschos (ed.). <I>Paradigms of Combinatorial Optimization: Problems and New Approaches</I>,
-ISTE and John Wiley &amp; Sons, 2nd edition, 107–129.
+ISTE and John Wiley &amp; Sons, 2nd edition, 107ï¿½129.
 </P>
 
 <P
@@ -1163,7 +1163,7 @@ New York, 278 pages.
 
 <P
  align="justify"
->[153] M. Dell’Amico, M. Iori, S. Martello, M. Monaci (2012).
+>[153] M. Dellï¿½Amico, M. Iori, S. Martello, M. Monaci (2012).
 A note on exact and heuristic algorithms for the identical parallel machine scheduling problem,
 <I>Journal of Heuristics</I> 18, 939-942
 </P>
@@ -1182,7 +1182,7 @@ SIAM, Philadelphia, xxii + 393 pages.
 
 <P
  align="justify"
->[150] S. Martello, M.G. Speranza (2012). <I>Ricerca Operativa per l’Economia e l’Impresa</I>, Esculapio, Bologna,
+>[150] S. Martello, M.G. Speranza (2012). <I>Ricerca Operativa per lï¿½Economia e lï¿½Impresa</I>, Esculapio, Bologna,
 x + 304 pages.
 </P>
 
@@ -1234,7 +1234,7 @@ Exploit Multi-user Diversity in IEEE 802.16 BandAMC. <I>Computer Networks </I> 5
 <img border="0" src="Jap12_bold_color.JPG" width="380" height="17"></a>. S. Umetani (ed.).
 <a href="http://www.kurims.kyoto-u.ac.jp/~kyodo/kokyuroku/contents/1726.html" target="_blank">
 <I>The evolution of optimization models and
-algorithms</I></a>, RIMS Kôkyûroku 1726, 139&ndash;154.
+algorithms</I></a>, RIMS Kï¿½kyï¿½roku 1726, 139&ndash;154.
 </P>
 
 <P
@@ -1245,7 +1245,7 @@ Developments in combinatorial optimization. <I>Computational Optimization and Ap
 
 <P
  align="justify"
->[140] C. D’Ambrosio, A. Lodi, S. Martello (2011).
+>[140] C. Dï¿½Ambrosio, A. Lodi, S. Martello (2011).
 Combinatorial traveling salesman problem algorithms. <I> Wiley Encyclopedia of Operations Research and Management
 Science</I>, Vol. 1, 738&ndash;747.
 </P>
@@ -1258,7 +1258,7 @@ Combinatorial optimization issues in scheduling. <I>Journal of Scheduling</I> 14
 
 <P
  align="justify"
->[138] C. D’Ambrosio, S. Martello (2011).
+>[138] C. Dï¿½Ambrosio, S. Martello (2011).
 Heuristic algorithms for the general nonlinear separable knapsack problem. <I> Computers &amp Operations Research</I> 38,
 505&ndash;513.
 </P>
@@ -1308,14 +1308,14 @@ Routing problems with loading constraints.
  align="justify"
 >[131] S. Martello (2010).
   <A href="TechReportEgervary.pdf">
-  <font color=#0000ff face="Comic Sans MS" size="4">Jeno Egerváry: from the origins of the Hungarian
+  <font color=#0000ff face="Comic Sans MS" size="4">Jeno Egervï¿½ry: from the origins of the Hungarian
 algorithm to satellite communication</font></A>.
 <I> Central European Journal of Operations Research</I> 18, 47&ndash;58.
 </P>
 
 <P
  align="justify"
->[130] C. D’Ambrosio, A. Lodi, S. Martello (2010).
+>[130] C. Dï¿½Ambrosio, A. Lodi, S. Martello (2010).
 Piecewise linear approximation of functions of two variables in MILP models. <I> Operations Research Letters</I> 38
 39&ndash;46.
 </P>
@@ -1334,9 +1334,9 @@ Piecewise linear approximation of functions of two variables in MILP models. <I>
 
 <P
  align="justify"
->[127] D. Bouyssou, S. Martello, F. Plastria (2009). Un plagiat répétitif: Analyse d’un cas de plagiat détecté à 4OR.
+>[127] D. Bouyssou, S. Martello, F. Plastria (2009). Un plagiat rï¿½pï¿½titif: Analyse dï¿½un cas de plagiat dï¿½tectï¿½ ï¿½ 4OR.
 Available online at <a href="http://responsable.unige.ch/index.php?main=b-29-7" target="_blank">
-<I>Internet: Fraude et déontologie selon les acteurs universitaires</I></a>.
+<I>Internet: Fraude et dï¿½ontologie selon les acteurs universitaires</I></a>.
 </P>
 
 <P
@@ -1379,7 +1379,7 @@ An MILP Approach for Short-Term Hydro Scheduling and Unit Commitment with Head-D
 
 <P
  align="justify"
->[120] M. Dell’Amico, M. Iori, S. Martello, M. Monaci (2008).
+>[120] M. Dellï¿½Amico, M. Iori, S. Martello, M. Monaci (2008).
 Heuristic and exact algorithms for the identical parallel machine scheduling problem, <I>INFORMS Journal on Computing</I> 20, 333&ndash;344.
 </P>
 
@@ -1433,7 +1433,7 @@ Three-Dimensional Bin Packing Problem, <I>ACM Transactions on Mathematical Softw
 
 <P
  align="justify"
->[111] G. Hasle, A. Løkketangen, S. Martello (2006) <I> Feature Issue: Rich models in
+>[111] G. Hasle, A. Lï¿½kketangen, S. Martello (2006) <I> Feature Issue: Rich models in
 discrete optimization: Formulation and resolution</I>, <I>European Journal of Operational
 Research</I> 175, 3.
 </P>
@@ -1456,7 +1456,7 @@ Research</I> 175, 3.
 
 <P
  align="justify"
->[107] G. Hasle, A. Løkketangen, S. Martello (2006). Rich models in
+>[107] G. Hasle, A. Lï¿½kketangen, S. Martello (2006). Rich models in
 discrete optimization: Formulation and resolution. <I>European Journal of Operational
 Research</I> 175, 1752&ndash;1753.
 </P>
