--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       <img border="0" src="F11_AORII.gif" width="200" height="300"></a>&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td bgcolor="#FFFFFF" valign="top" width="203">
       <a href="http://link.springer.com/journal/10479/207/1/page/1" target="_blank">
-      <img border="0" src="Vol_207.gif" width="200" height="300"></a>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+      <img border="0" src="Vol_207.webp" width="200" height="300"></a>&nbsp;&nbsp;&nbsp;&nbsp;</td>
 </H3>
 
 <H3
@@ -388,7 +388,7 @@ Boston, 1999 (co-edited with S. Voss, I.H. Osman and C.Roucairol), xii + 511 pag
 ></LI
 ><LI
  align="justify"
-><a href="http://www.springer.com/journal/10288/edboard" target="_blank">
+><a href="https://link.springer.com/journal/10288/editors" target="_blank">
 <FONT size="+1"><I>4OR-A Quarterly Journal of Operations Research</I></a> 2003&ndash; </P
 ></LI
 ></UL
