--- a/Friends.html
+++ b/Friends.html
@@ -52,18 +52,18 @@ document [imgName].src = img2;
 <a href="http://en.wikipedia.org/wiki/A_Beautiful_Mind_(film)" target="_blank">
 <font color="blue" face="Comic Sans MS" size="4"> (A beautiful mind,</font></a>
  &nbsp;
-<a href="http://www.or.deis.unibo.it/staff_pages/martello/NashandCrowe.jpg" target="_blank">
+<a href="NashandCrowe.jpg" target="_blank">
 <font color="blue" face="Comic Sans MS" size="4"> Nash and Russell Crowe)</font></a>
 <BR>
 <nobr>
          </A></ADDRESS>
-<a href="http://www.or.deis.unibo.it/staff_pages/martello/JohnNash.jpg" target="_blank">
+<a href="JohnNash.jpg" target="_blank">
 <img border="0" alt="John F. Nash and Silvano Martello" src="JohnNash_small.jpg" width="90" height="60"></a>
-<a href="http://www.or.deis.unibo.it/staff_pages/martello/John Nash IFORS Distinguished Lecturer.jpg" target="_blank">
+<a href="John Nash IFORS Distinguished Lecturer.jpg" target="_blank">
 <img border="0" alt="John F. Nash and Silvano Martello" src="John Nash IFORS Distinguished Lecturer_small.jpg" width="90" height="60"></a>
-<a href="http://www.or.deis.unibo.it/staff_pages/martello/Silvano Martello IFORS Distinguished Lecturer.jpg" target="_blank">
+<a href="Silvano Martello IFORS Distinguished Lecturer.jpg" target="_blank">
 <img border="0" alt="John F. Nash and Silvano Martello" src="Silvano Martello IFORS Distinguished Lecturer_small.jpg" width="90" height="60"></a>
-<ADDRESS><A HREF="http://www.or.deis.unibo.it/staff_pages/martello/JohnNash_CBS.mp4" type="application/octet-stream" target="_blank"><font color="blue" face="Comic Sans MS" size="4">John Nash's Beatiful Mind</font><BR>
+<ADDRESS><A HREF="JohnNash_CBS.mp4" type="application/octet-stream" target="_blank"><font color="blue" face="Comic Sans MS" size="4">John Nash's Beatiful Mind</font><BR>
 </A></ADDRESS>
 </nobr>
 </tr>
@@ -78,12 +78,12 @@ document [imgName].src = img2;
   <td width=634 colspan=2>&nbsp;</td>
  </tr>
  <tr>
-  <td width=634 colspan=2>
+  <td width=634 colspan>
 <tr>
   <td width=734 colspan=2>
 <ADDRESS><A HREF="http://en.wikipedia.org/wiki/Jack_Edmonds" target="_blank"><font color="blue" face="Comic Sans MS" size="4">Jack Edmonds</font><BR>
          </A></ADDRESS>
-<a href="http://www.or.deis.unibo.it/staff_pages/martello/JackEdmonds.JPG" target="_blank">
+<a href="JackEdmonds.JPG" target="_blank">
 <img border="0" alt="Jack Edmonds and Silvano Martello" src="JackEdmonds_small.JPG" width="90" height="60"></a>
 </tr>
 
@@ -101,9 +101,9 @@ document [imgName].src = img2;
   <td width=734 colspan=2>
 <ADDRESS><A HREF="http://en.wikipedia.org/wiki/Harold_W._Kuhn" target="_blank"><font color="blue" face="Comic Sans MS" size="4">Harold W. Kuhn</font><BR>
 </A></ADDRESS>
-<a href="http://www.or.deis.unibo.it/staff_pages/martello/HaroldKuhn.JPG" target="_blank">
+<a href="HaroldKuhn.JPG" target="_blank">
 <img border="0" alt="Harold W. Kuhn and Silvano Martello" src="HaroldKuhn_small.JPG" width="90" height="60"></a>
-<ADDRESS><A HREF="http://www.or.deis.unibo.it/staff_pages/martello/LisbonTrailer.m4v" target="_blank"><font color="blue" face="Comic Sans MS" size="4">Hollywood style trailer &copy FCCN, 2010</font><BR>
+<ADDRESS><A HREF="LisbonTrailer.m4v" target="_blank"><font color="blue" face="Comic Sans MS" size="4">Hollywood style trailer &copy FCCN, 2010</font><BR>
 </A></ADDRESS>
 </tr>
 
@@ -117,7 +117,7 @@ document [imgName].src = img2;
   <td width=734 colspan=2>
 <ADDRESS><A HREF="https://en.wikipedia.org/wiki/David_S._Johnson" target="_blank"><font color="blue" face="Comic Sans MS" size="4">David S. Johnson</font><BR>
          </A></ADDRESS>
-<a href="http://www.or.deis.unibo.it/staff_pages/martello/David Johnson.jpg" target="_blank">
+<a href="David Johnson.jpg" target="_blank">
 <img border="0" alt="David S. Johnson and Silvano Martello" src="David Johnson_small.jpg" width="90" height="60"></a>
 </tr>
 
@@ -134,7 +134,7 @@ document [imgName].src = img2;
   <td width=734 colspan=2>
 <ADDRESS><A HREF="http://en.wikipedia.org/wiki/Little%27s_law" target="_blank"><font color="blue" face="Comic Sans MS" size="4">John Little</font><BR>
          </A></ADDRESS>
-<a href="http://www.or.deis.unibo.it/staff_pages/martello/JohnLittle.jpg" target="_blank">
+<a href="JohnLittle.jpg" target="_blank">
 <img border="0" alt="John D.C. Little and Silvano Martello" src="JohnLittle_small.jpg" width="90" height="60"></a>
 </tr>
 
@@ -150,7 +150,7 @@ document [imgName].src = img2;
   <td width=734 colspan=2>
 <ADDRESS><A HREF="http://en.wikipedia.org/wiki/James_Mirrlees" target="_blank"><font color="blue" face="Comic Sans MS" size="4">Sir James Mirrlees</font><BR>
          </A></ADDRESS>
-<a href="http://www.or.deis.unibo.it/staff_pages/martello/James Mirrlees and Silvano Martello.jpg" target="_blank">
+<a href="James Mirrlees and Silvano Martello.jpg" target="_blank">
 <img border="0" alt="James Mirrlees and Silvano Martello" src="James Mirrlees and Silvano Martello_small.jpg" width="90" height="60"></a>
 </tr>
 
@@ -169,7 +169,7 @@ document [imgName].src = img2;
  &nbsp;
 <BR>
          </A></ADDRESS>
-<a href="http://www.or.deis.unibo.it/staff_pages/martello/Parabola.jpg" target="_blank">
+<a href="Parabola.jpg" target="_blank">
 <img border="0" src="Parabola.jpg" width="90" height="60"></a>
 <ADDRESS><A HREF="Martello.avi" target="_blank"><font color="blue" face="Comic Sans MS" size="4">Thrill of speed</font><BR>
 </A></ADDRESS>
