--- a/index.html
+++ b/index.html
@@ -614,12 +614,12 @@ Boston, 1999 (co-edited with S. Voss, I.H. Osman and C.Roucairol), xii + 511 pag
 <!--
 <a href="https://www.euro-online.org/web/pages/1634/egm-laureate-2018"target="_blank">
 EURO Gold Medal</a> 2018. &nbsp &nbsp
-<a href="http://www.or.deis.unibo.it/staff_pages/martello/Gold_medium.jpg" target="_blank">
+<a href="Gold_medium.jpg" target="_blank">
 <img border="0" alt="Silvano Martello EURO Gold Medal" src="Gold_small.jpg" width="90" height="60"></a>
 <a href="euro-gold-medal.htm" target="_blank"><b>Laureate lecture:</b> Assignments, Matchings, and the European Roots of Combinatorial Optimization.</a><br/>
 <a href="https://www.euro-online.org/web/pages/1634/egm-laureate-2018"target="_blank">
 EURO Gold Medal</a> 2018. 
-<a href="http://www.or.deis.unibo.it/staff_pages/martello/Gold_medium.jpg" target="_blank">
+<a href="Gold_medium.jpg" target="_blank">
 <img border="0" alt="Silvano Martello EURO Gold Medal" src="Gold_small.jpg" width="90" height="60"></a>
 &nbsp &nbsp
 <A HREF="https://www.youtube.com/watch?v=Ihyq103p8Tk" target="_blank"><font color="blue" face="Comic Sans MS" size="4"><b>Laureate lecture:</b> Assignments, Matchings, and the European Roots of Combinatorial Optimization (YouTube)</a><br/>
@@ -628,7 +628,7 @@ EURO Gold Medal</a> 2018.
 -->
 <a href="https://www.euro-online.org/web/pages/1634/egm-laureate-2018"target="_blank">
 EURO Gold Medal</a> 2018. 
-<a href="http://www.or.deis.unibo.it/staff_pages/martello/Gold_medium.jpg" target="_blank">
+<a href="Gold_medium.jpg" target="_blank">
 <img border="0" alt="Silvano Martello EURO Gold Medal" src="Gold_small.jpg" width="90" height="60"></a>
 &nbsp &nbsp
 <A HREF="https://www.youtube.com/watch?v=Ihyq103p8Tk" target="_blank"><font color="blue" face="Comic Sans MS" size="4"><b>Laureate lecture:</b> Assignments, Matchings, and the European Roots of Combinatorial Optimization 
@@ -641,7 +641,7 @@ EURO Gold Medal</a> 2018.
 ><FONT size="+1">
 <a href="http://ifors.org/web/silvano-martello/" target="_blank">
 IFORS Distinguished Lecturer</a> 2012 
-<a href="http://www.or.deis.unibo.it/staff_pages/martello/Silvano Martello IFORS Distinguished Lecturer.jpg" target="_blank">
+<a href="Silvano Martello IFORS Distinguished Lecturer.jpg" target="_blank">
 <img border="0" alt="Silvano Martello IFORS Distinguished Lecturer" src="Silvano Martello IFORS Distinguished Lecturer_small.jpg" width="90" height="60"></a>
 </P
 ></LI
