--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </TD>
 
 <TD>
-         Home page of <A HREF="http://scholar.google.com/citations?hl=en&user=o4a20zsAAAAJ&view_op=list_works"target="_blank"
+         Home page of <A HREF="https://en.wikipedia.org/wiki/Silvano_Martello"target="_blank"
          </A>Silvano Martello
 
          <ADDRESS><A HREF="http://www.dei.unibo.it/en" target="_blank">DEI "Guglielmo Marconi", University of Bologna<BR>
