--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <TD>
          Home page of <A HREF="https://en.wikipedia.org/wiki/Silvano_Martello"target="_blank"
-         </A>Silvano Martello <img align=middle hspace=1 src="Wikipedia-logo-v2-en.svg.png" border=0 width="90">
+         </A>Silvano Martello <img border="0" src="Martello.jpg" width="300" height="235">
 
          <ADDRESS><A HREF="http://www.dei.unibo.it/en" target="_blank">DEI "Guglielmo Marconi", University of Bologna<BR>
 
