--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
 
 <TD>
          Home page of <A HREF="https://en.wikipedia.org/wiki/Silvano_Martello"target="_blank"
-         </A>Silvano Martello <img border="0" src="Wikipedia-logo-v2-en.svg.png" width="200" height="200">
+         </A>Silvano Martello 
 
-         <ADDRESS><A HREF="http://www.dei.unibo.it/en" target="_blank">DEI "Guglielmo Marconi", University of Bologna<BR>
+         <ADDRESS><A HREF="http://www.dei.unibo.it/en" target="_blank">DEI "Guglielmo Marconi"<BR>
+         <ADDRESS><A HREF="http://www.dei.unibo.it/en" target="_blank">Alma mater Studiorum Università di Bologna<BR>
 
          </A></ADDRESS>
 
