--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
          </A>Silvano Martello 
 
          <ADDRESS><A HREF="http://www.dei.unibo.it/en" target="_blank">DEI "Guglielmo Marconi"<BR>
-         <ADDRESS><A HREF="http://www.dei.unibo.it/en" target="_blank">Alma mater Studiorum Università di Bologna<BR>
+         <ADDRESS><A HREF="https://www.unibo.it/en/" target="_blank">Alma mater Studiorum Università di Bologna<BR>
 
          </A></ADDRESS>
 
