--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <TD>
          Home page of <A HREF="https://en.wikipedia.org/wiki/Silvano_Martello"target="_blank"
-         </A>Silvano Martello>
+         </A>Silvano Martello> <img align=middle hspace=1 src="ribbon_c_BS.jpg" border=0 width="90">
 
          <ADDRESS><A HREF="http://www.dei.unibo.it/en" target="_blank">DEI "Guglielmo Marconi"<BR>
          <ADDRESS><A HREF="https://www.unibo.it/en/" target="_blank">Alma mater Studiorum Università di Bologna<BR>
