--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 </TD>
 
 <TD>
-         Home page of <A HREF="https://en.wikipedia.org/wiki/Silvano_Martello"target="_blank"
-         </A>Silvano Martello 
+         Home page of <A HREF="https://en.wikipedia.org/wiki/Silvano_Martello"target="_blank">Silvano Martello <BR>
 
          <ADDRESS><A HREF="http://www.dei.unibo.it/en" target="_blank">DEI "Guglielmo Marconi"<BR>
          <ADDRESS><A HREF="https://www.unibo.it/en/" target="_blank">Alma mater Studiorum Università di Bologna<BR>
