--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 </TD>
 
 <TD>
-         Home page of <A HREF="https://en.wikipedia.org/wiki/Silvano_Martello"target="_blank">Silvano Martello <BR>
+         Home page of <A HREF="https://en.wikipedia.org/wiki/Silvano_Martello"target="_blank">Silvano Martello <img align=middle hspace=1 src="ribbon_c_BS.jpg" border=0 width="90"><BR>
 
          <ADDRESS><A HREF="http://www.dei.unibo.it/en" target="_blank">DEI "Guglielmo Marconi"<BR>
-         <ADDRESS><A HREF="https://www.unibo.it/en/" target="_blank">Alma mater Studiorum Università di Bologna<BR>
+         <ADDRESS><A HREF="https://www.unibo.it/en/" target="_blank">Alma Mater Studiorum Università di Bologna<BR>
 
          </A></ADDRESS>
 
