--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </TD>
 
 <TD>
-         Home page of <A HREF="https://en.wikipedia.org/wiki/Silvano_Martello"target="_blank">Silvano Martello <img align=middle hspace=1 src="ribbon_c_BS.jpg" border=0 width="90"><BR>
+         Home page of <A HREF="https://en.wikipedia.org/wiki/Silvano_Martello"target="_blank">Silvano Martello<BR>
 
          <ADDRESS><A HREF="http://www.dei.unibo.it/en" target="_blank">DEI "Guglielmo Marconi"<BR>
          <ADDRESS><A HREF="https://www.unibo.it/en/" target="_blank">Alma Mater Studiorum Università di Bologna<BR>
@@ -44,7 +44,7 @@
 
          <ADDRESS>Phone: +39 (051) 209 3022<BR>
 
-         Fax: +39 (051) 209 3073</ADDRESS>
+         Fax: +39 (051) 208 6272</ADDRESS>
 
          <ADDRESS>&nbsp;</ADDRESS>
 
