--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <img border="0" src="Knapsack.jpg" width="200" height="300"></a><a<B>&rarr;</B></a>
 </td>
 <td bgcolor="#FFFFFF" valign="bottom" width="203">
-<a href="knapsack.html" target="_blank">
+<a href="https://silvano333.github.io/kp.html" target="_blank">
 <B>free download</B></a></td>
 
 
