--- a/index.html
+++ b/index.html
@@ -102,9 +102,7 @@
 
 <FONT size="+1" color="#000000">
 <td bgcolor="#FFFFFF" valign="top" width="203">
-<!--
-      <a href="http://www.amazon.com/Assignment-Problems-Rainer-Burkard/dp/0898716632/ref=sr_1_1?s=books&ie=UTF8&qid=1305739658&sr=1-1" target="_blank">
--->
+<a href="https://epubs.siam.org/doi/abs/10.1137/1.9781611972238" target="_blank">
       <img border="0" src="front.jpg" width="200" height="300">
       </a>&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td bgcolor="#FFFFFF" valign="top" width="203">
