--- a/index.html
+++ b/index.html
@@ -106,9 +106,7 @@
       <img border="0" src="front.jpg" width="200" height="300">
       </a>&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td bgcolor="#FFFFFF" valign="top" width="203">
-<!--
-      <a href="http://www.amazon.com/Knapsack-Problems-Implementations-Wiley-Interscience-Optimization/dp/0471924202/ref=pd_rhf_p_t_1" target="_blank">
--->
+      <a href="https://dl.acm.org/doi/10.5555/98124" target="_blank">
       <img border="0" src="Knapsack.jpg" width="200" height="300"></a><a<B>&rarr;</B></a>
 </td>
 <td bgcolor="#FFFFFF" valign="bottom" width="203">
