--- a/index.html
+++ b/index.html
@@ -121,19 +121,13 @@
 >
 <FONT size="+1" color="#000000">
 <td bgcolor="#FFFFFF" valign="top" width="203">
-<!--
-      <a href="http://www.amazon.com/Meta-Heuristics-Advances-Trends-Paradigms-Optimization/dp/0792383699" target="_blank">
--->
+      <a href="https://link.springer.com/book/10.1007/978-1-4615-5775-3" target="_blank">
       <img border="0" src="Metaheuristics_Amazon.jpg" width="200" height="300"></a>&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td bgcolor="#FFFFFF" valign="top" width="203">
-<!--
-      <a href="http://www.amazon.com/Bibliographies-Combinatorial-Optimization-Interscience-Mathematics/dp/047196574X/sr=1-1/qid=1164219672/ref=sr_1_1/105-4182982-9302845?ie=UTF8&s=books" target="_blank">
--->
+      <a href="https://www.wiley.com/en-ie/Annotated+Bibliographies+in+Combinatorial+Optimization-p-9780470860700" target="_blank">
       <img border="0" src="Biblio.jpg" width="200" height="300"></a>&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td bgcolor="#FFFFFF" valign="top" width="203">
-<!--
       <a href="http://www.editrice-esculapio.com/martello-speranza-ricerca-operativa/" target="_blank">
--->
       <img border="0" src="RicercaOperativaEconomia_2020_1cop_1.jpg" width="200" height="300"></a>&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td bgcolor="#FFFFFF" valign="top" width="203">
       <a href="http://www.internetculturale.it/it/16/search?q=Il+problema+dell%27assegnamento%3A+metodi+ed+algoritmi&instance=metaindice" target="_blank">
