--- a/index.html
+++ b/index.html
@@ -133,10 +133,8 @@
       <a href="http://www.internetculturale.it/it/16/search?q=Il+problema+dell%27assegnamento%3A+metodi+ed+algoritmi&instance=metaindice" target="_blank">
       <img border="0" src="Assegnamento_blu.jpg" width="200" height="300"></a>&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td bgcolor="#FFFFFF" valign="top" width="203">
-<!--
-      <a href="http://www.editrice-esculapio.com/martello-ricerca-operativa/" target="_blank">
--->
-      <img border="0" src="front_Pagina_1.jpg" width="200" height="300"></a>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+      <a href="https://www.editrice-esculapio.com/post/martello-ricerca-operativa" target="_blank">
+      <img border="0" src="RicercaOperativa2024.jpg" width="200" height="300"></a>&nbsp;&nbsp;&nbsp;&nbsp;</td>
 </H3>
 
 <H3
