--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </TD>
 
 <TD>
-         Home page of <A HREF="https://en.wikipedia.org/wiki/Silvano_Martello"target="_blank">Silvano Martello<BR>
+         Home page of <A HREF="https://en.wikipedia.org/wiki/Silvano_Martello"target="_blank">Silvano Martello Wikipedia-logo-v2-en_20.jpg<BR>
 
          <ADDRESS><A HREF="http://www.dei.unibo.it/en" target="_blank">DEI "Guglielmo Marconi"<BR>
          <ADDRESS><A HREF="https://www.unibo.it/en/" target="_blank">Alma Mater Studiorum Università di Bologna<BR>
