--- a/index.html
+++ b/index.html
@@ -251,9 +251,7 @@
 <LI
  align="justify"
 >
-<!--
-<a href="http://www.amazon.com/Knapsack-Problems-Implementations-Interscience-Optimization/dp/0471924202" target="_blank">
--->
+<a href="https://dl.acm.org/doi/10.5555/98124" target="_blank">
 <I>Knapsack Problems: Algorithms and Computer Implementations</I></a>, John Wiley &amp; Sons, Chichester&ndash;New York, 1990 (with P. Toth), xii + 296 pages;
 <BR><B><font color="red">over 6000 citations</font></B> on <a href="http://scholar.google.com/citations?hl=en&user=o4a20zsAAAAJ&view_op=list_works" target="_blank">
 Google Scholar</a> (as of December 2022);
