--- a/index.html
+++ b/index.html
@@ -260,12 +260,12 @@ Google Scholar</a> (as of December 2022);
 </P></LI>
 <LI
  align="justify"
-><a href="http://www.assignmentproblems.com/" target="_blank">
+><a href="https://epubs.siam.org/doi/abs/10.1137/1.9781611972238" target="_blank">
 <I>Assignment Problems</I></a>, SIAM, Philadelphia, 2009 (with R. Burkard and M. Dell'Amico), xx + 382 pages
 </P></LI>
 <LI
  align="justify"
-><a href="http://www.assignmentproblems.com/" target="_blank">
+><a href="https://epubs.siam.org/doi/abs/10.1137/1.9781611972238" target="_blank">
 <I>Assignment Problems - Revised Reprint</I></a>, SIAM, Philadelphia, 2012 (with R. Burkard and M. Dell'Amico), xxii + 393 pages;
 <BR><B><font color="red">over 1800 citations</font></B> on <a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=o4a20zsAAAAJ&citation_for_view=o4a20zsAAAAJ:9yKSN-GCB0IC" target="_blank">
 Google Scholar</a> (as of December 2022);
@@ -279,9 +279,7 @@ Google Scholar</a> (as of December 2022);
 <LI
  align="justify"
 >
-<!--
 <a href="http://www.editrice-esculapio.com/martello-ricerca-operativa/" target="_blank">
--->
 <I>Ricerca Operativa</I></a>, Esculapio, Bologna, 2014, xii + 315 pages
 </P></LI>
 </UL>
