--- a/index.html
+++ b/index.html
@@ -267,20 +267,20 @@ Google Scholar</a> (as of December 2022);
  align="justify"
 ><a href="https://epubs.siam.org/doi/abs/10.1137/1.9781611972238" target="_blank">
 <I>Assignment Problems - Revised Reprint</I></a>, SIAM, Philadelphia, 2012 (with R. Burkard and M. Dell'Amico), xxii + 393 pages;
-<BR><B><font color="red">over 1800 citations</font></B> on <a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=o4a20zsAAAAJ&citation_for_view=o4a20zsAAAAJ:9yKSN-GCB0IC" target="_blank">
-Google Scholar</a> (as of December 2022);
+<BR><B><font color="red">over 2000 citations</font></B> on <a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=o4a20zsAAAAJ&citation_for_view=o4a20zsAAAAJ:9yKSN-GCB0IC" target="_blank">
+Google Scholar</a> (as of March 2024);
 </P></LI>
 <LI
  align="justify"
 >
 <a href="http://www.editrice-esculapio.com/martello-speranza-ricerca-operativa/" target="_blank">
-<I>Ricerca Operativa per l'Economia e l'Impresa</I></a>, Esculapio, Bologna, 2012 (with M.G. Speranza), x + 304 pages
+<I>Ricerca Operativa per l'Economia e l'Impresa</I></a>, Esculapio, Bologna, 2021 (with M.G. Speranza), x + 287 pages
 </P></LI>
 <LI
  align="justify"
 >
 <a href="http://www.editrice-esculapio.com/martello-ricerca-operativa/" target="_blank">
-<I>Ricerca Operativa</I></a>, Esculapio, Bologna, 2014, xii + 315 pages
+<I>Ricerca Operativa</I></a>, Esculapio, Bologna, 2024, x + 294 pages
 </P></LI>
 </UL>
 
