--- a/index.html
+++ b/index.html
@@ -293,18 +293,14 @@ Google Scholar</a> (as of March 2024);
 ><LI
  align="justify"
 >
-<!--
 <a href="http://www.amazon.ca/exec/obidos/ASIN/0444701362" target="_blank">
--->
 <I>Surveys in Combinatorial Optimization</I></a>, North-Holland, Amsterdam, 1987 (co-edited with G. Laporte, M. Minoux
 and C. Ribeiro), ix + 384 pages </P
 ></LI
 ><LI
  align="justify"
 >
-<!--
-<a href="http://www.amazon.com/Bibliographies-Combinatorial-Optimization-Interscience-Mathematics/dp/047196574X/sr=1-1/qid=1164219672/ref=sr_1_1/105-4182982-9302845?ie=UTF8&s=books" target="_blank">
--->
+<a href="https://www.wiley.com/en-ie/Annotated+Bibliographies+in+Combinatorial+Optimization-p-9780470860700" target="_blank">
 <I>Annotated Bibliographies in Combinatorial Optimization</I></a>, John Wiley &amp; Sons,
 Chichester&ndash;New York, 1997 (co-edited with M. Dell'Amico and F. Maffioli), xiii + 495 pages  </P
 ></LI
