--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       <a href="http://link.springer.com/journal/10479/153/1/page/1" target="_blank">
       <img border="0" src="Vol_153.gif" width="200" height="300"></a>&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td bgcolor="#FFFFFF" valign="top" width="203">
-      <a href="http://www.amazon.ca/exec/obidos/ASIN/0444701362" target="_blank">
+      <a href="https://shop.elsevier.com/books/surveys-in-combinatorial-optimization/martello/978-0-444-70136-7" target="_blank">
       <img border="0" src="Surveys.jpg" width="200" height="300"></a>&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td bgcolor="#FFFFFF" valign="top" width="203">
       <a href="http://link.springer.com/journal/10479/175/1/page/1" target="_blank">
@@ -293,7 +293,7 @@ Google Scholar</a> (as of March 2024);
 ><LI
  align="justify"
 >
-<a href="http://www.amazon.ca/exec/obidos/ASIN/0444701362" target="_blank">
+<a href="https://shop.elsevier.com/books/surveys-in-combinatorial-optimization/martello/978-0-444-70136-7" target="_blank">
 <I>Surveys in Combinatorial Optimization</I></a>, North-Holland, Amsterdam, 1987 (co-edited with G. Laporte, M. Minoux
 and C. Ribeiro), ix + 384 pages </P
 ></LI
