--- a/index.html
+++ b/index.html
@@ -307,10 +307,7 @@ Chichester&ndash;New York, 1997 (co-edited with M. Dell'Amico and F. Maffioli), 
 ><LI
  align="justify"
 >
-<!--
-<a href="http://www.amazon.com/Meta-Heuristics-Advances-Trends-Paradigms-Optimization/dp/0792383699" target="_blank">
--->
-<I>Meta-Heuristics: Advances and Trends in Local Search Paradigms for Optimization</I></a>, Kluwer Academic Publishers,
+<a href="https://link.springer.com/book/10.1007/978-1-4615-5775-3" target="_blank"><I>Meta-Heuristics: Advances and Trends in Local Search Paradigms for Optimization</I></a>, Kluwer Academic Publishers,
 Boston, 1999 (co-edited with S. Voss, I.H. Osman and C.Roucairol), xii + 511 pages </P
 ></LI
 ><LI
