--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ Boston, 1999 (co-edited with S. Voss, I.H. Osman and C.Roucairol), xii + 511 pag
 >
 <LI
  align="justify"
-><a href="https://www.sciencedirect.com/search?qs=editorial%20board&pub=Computers%20%26%20Industrial%20Engineering&cid=271420" target="_blank">
+><a href="https://www.sciencedirect.com/journal/computers-and-industrial-engineering/about/editorial-board" target="_blank">
 <FONT size="+1"><I>Computers &amp Industrial Engineering
 </I></a> </P
 ></LI>
