--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@ Boston, 1999 (co-edited with S. Voss, I.H. Osman and C.Roucairol), xii + 511 pag
 ></LI
 ><LI
  align="justify"
-><a href="http://www.elsevier.com/wps/find/journaleditorialboard.cws_home/702998/editorialboard#editorialboard" target="_blank">
+><a href="https://www.sciencedirect.com/journal/discrete-optimization/about/editorial-board" target="_blank">
 <FONT size="+1"><I>Discrete Optimization</I></a> </P
 ></LI
 ><LI
