--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ Boston, 1999 (co-edited with S. Voss, I.H. Osman and C.Roucairol), xii + 511 pag
 ></LI
 ><LI
  align="justify"
-><a href="http://www.springer.com/business+%26+management/operations+research/journal/13675?detailsPage=editorialBoard" target="_blank">
+><a href="https://www.sciencedirect.com/journal/euro-journal-on-computational-optimization/about/editorial-board" target="_blank">
 <FONT size="+1"><I>EURO Journal on Computational Optimization</I></a> </P
 ></LI>
 <LI
