--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@ Boston, 1999 (co-edited with S. Voss, I.H. Osman and C.Roucairol), xii + 511 pag
 ></LI
 ><LI
  align="justify"
-><a href="http://www.springer.com/journal/10732/edboard" target="_blank">
+><a href="https://link.springer.com/journal/10732/editors" target="_blank">
 <FONT size="+1"><I>Journal of Heuristics</I></a> (1995-2018)</P
 ></LI
 ><LI
