--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@ Boston, 1999 (co-edited with S. Voss, I.H. Osman and C.Roucairol), xii + 511 pag
 ></LI
 ><LI
  align="justify"
-><a href="http://www.sciencedirect.com/science/journal/0166218X/112/1-3" target="_blank">
+><a href="https://www.sciencedirect.com/science/article/pii/S0166218X00002985" target="_blank">
 <FONT size="+1">Combinatorial Optimization Symposium</a>,
 <I>Discrete Applied Mathematics</I> 112, 1&ndash;3, 2001 (with M. Labb&eacute; and G. Laporte) </P
 ></LI
