--- a/index.html
+++ b/index.html
@@ -663,10 +663,10 @@ Center for Management of Operations and Logistics</a>, University of Texas at Au
 <UL type="disc">
 <LI align="justify"><font color="red">
 </font><a href="http://scholar.google.com/citations?hl=en&user=o4a20zsAAAAJ&view_op=list_works" target="_blank">
-Google Scholar profile</a> (over 23,000 citations, as of December 2022)</P
+Google Scholar profile</a> (over 25,000 citations, as of December 2022)</P
 ></LI >
 <LI align="justify" >
-</font><a href="http://www.ams.org/mathscinet/search/publications.html?pg1=IID&amp;s1=120355" target="_blank">
+</font><a href="https://mathscinet-ams-org.ezproxy.unibo.it/mathscinet/author?authorId=120355?pg1=IID&amp;s1=120355" target="_blank">
 Papers reviewed on MathSciNet</a> (subscription to the American Mathematical Society needed outside University of Bologna)</a>
 </P
 ></LI>
@@ -681,10 +681,10 @@ Ranking of the World's Top 2% Scientists (Stanford University)</a>
 </LI>
 <LI align="justify">
 <FONT size="+1"><a href="http://en.wikipedia.org/wiki/H-index" target="_blank"><font color="blue">h-index</B></font></a>
-<font color="blue"> = 60</font> (computed by
+<font color="blue"> = 64</font> (computed by
 <a href="http://scholar.google.com/citations?hl=en&user=o4a20zsAAAAJ&view_op=list_works" target="_blank">Google Scholar</a> ).
 Also see 
-<a href="http://www.topitalianscientists.org/TIS_HTML/Top_Italian_Scientists_Mathematics.htm" target="_blank">
+<a href="https://topitalianscientists.org/tis/2386/Silvano_Martello_-_Top_Italian_Scientist_in_Mathematics" target="_blank">
 Top 10 Italian Scientists in Mathematics</a>
 and
 <a href="http://www.guide2research.com/scientists/IT" target="_blank">
