--- a/index.html
+++ b/index.html
@@ -663,10 +663,10 @@ Center for Management of Operations and Logistics</a>, University of Texas at Au
 <UL type="disc">
 <LI align="justify"><font color="red">
 </font><a href="http://scholar.google.com/citations?hl=en&user=o4a20zsAAAAJ&view_op=list_works" target="_blank">
-Google Scholar profile</a> (over 25,000 citations, as of December 2022)</P
+Google Scholar profile</a> (over 25,000 citations, as of December 2023)</P
 ></LI >
 <LI align="justify" >
-</font><a href="https://mathscinet-ams-org.ezproxy.unibo.it/mathscinet/author?authorId=120355?pg1=IID&amp;s1=120355" target="_blank">
+</font><a href="https://mathscinet-ams-org.ezproxy.unibo.it/mathscinet/author?authorId=120355" target="_blank">
 Papers reviewed on MathSciNet</a> (subscription to the American Mathematical Society needed outside University of Bologna)</a>
 </P
 ></LI>
@@ -685,23 +685,23 @@ Ranking of the World's Top 2% Scientists (Stanford University)</a>
 <a href="http://scholar.google.com/citations?hl=en&user=o4a20zsAAAAJ&view_op=list_works" target="_blank">Google Scholar</a> ).
 Also see 
 <a href="https://topitalianscientists.org/tis/2386/Silvano_Martello_-_Top_Italian_Scientist_in_Mathematics" target="_blank">
-Top 10 Italian Scientists in Mathematics</a>
+Top Italian Scientists in Mathematics</a>
 and
-<a href="http://www.guide2research.com/scientists/IT" target="_blank">
+<a href="https://research.com/u/silvano-martello" target="_blank">
 Top H-Index For Scientists in Italy</a>
 </P>
 </LI>
 
 <LI align="justify">
 <FONT size="+1"><a href="http://en.wikipedia.org/wiki/G-index" target="_blank"><font color="blue">i10-index</font></a>
-<font color="blue"> = 117</font> (computed by
+<font color="blue"> = 124</font> (computed by
 <a href="http://scholar.google.com/citations?hl=en&user=o4a20zsAAAAJ&view_op=list_works" target="_blank">Google Scholar</a>).
 </P>
 </LI>
 
 <LI align="justify">
 <FONT size="+1"><a href="http://en.wikipedia.org/wiki/G-index" target="_blank"><font color="blue">i100-index</font></a>
-<font color="blue"> = 41</font> (computed by
+<font color="blue"> = 47</font> (computed by
 <a href="http://scholar.google.com/citations?hl=en&user=o4a20zsAAAAJ&view_op=list_works" target="_blank">Google Scholar</a>).
 </P>
 </LI>
@@ -719,7 +719,7 @@ Top H-Index For Scientists in Italy</a>
 </LI>
 <LI align="justify">
 <FONT size="+1"><font color="blue">Web of Science <a href="http://en.wikipedia.org/wiki/H-index" target="_blank"><font color="blue">
-h-index</font></a> = 35</font> (computed by <a href="http://isiknowledge.com/" target="_blank">
+h-index</font></a> = 37</font> (computed by <a href="http://isiknowledge.com/" target="_blank">
 ISI Web of Knowledge</a>) </P>
 </LI>
 
@@ -727,7 +727,7 @@ ISI Web of Knowledge</a>) </P>
 </LI>
 <LI align="justify">
 <FONT size="+1"><font color="blue">Scopus <a href="http://en.wikipedia.org/wiki/H-index" target="_blank"><font color="blue">
-h-index</font></a> = 39</font> (computed by <a href="http://www.scopus.com/" target="_blank">
+h-index</font></a> = 43</font> (computed by <a href="http://www.scopus.com/" target="_blank">
 Scopus</a>) </P>
 </LI>
 
