--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@ Top H-Index For Scientists in Italy</a>
 </LI>
 <LI align="justify">
 <FONT size="+1"><font color="blue">Web of Science <a href="http://en.wikipedia.org/wiki/H-index" target="_blank"><font color="blue">
-h-index</font></a> = 37</font> (computed by <a href="http://isiknowledge.com/" target="_blank">
+h-index</font></a> = 37</font> (computed by <a href="https://www.webofscience.com/wos/author/search" target="_blank">
 ISI Web of Knowledge</a>) </P>
 </LI>
 
