--- a/index.html
+++ b/index.html
@@ -737,6 +737,20 @@ Scopus</a>) </P>
 <FONT size="+1"><font color="blue"><a href="http://en.wikipedia.org/wiki/Erd%C5%91s_number" target="_blank"><font color="blue">
 Erd&#337;s number</font></a> = 3</font> (via Dominique de Werra and Pavol Hell)</a></P>
 </LI>
+ 
+</P>
+</LI>
+<LI align="justify">
+<FONT size="+1"><font color="blue"><a href="https://en.wikipedia.org/wiki/Silvano_Martello" target="_blank"><font color="blue">
+Wikipedia</font></a> = 3</font></a></P>
+</LI>
+
+</P>
+</LI>
+<LI align="justify">
+<FONT size="+1"><font color="blue"><a href="https://it.wikipedia.org/wiki/Silvano_Martello" target="_blank"><font color="blue">
+Wikipedia (Italian)</font></a> = 3</font></a></P>
+</LI>
 
 <LI
  align="justify"
