--- a/index.html
+++ b/index.html
@@ -742,14 +742,14 @@ Erd&#337;s number</font></a> = 3</font> (via Dominique de Werra and Pavol Hell)<
 </LI>
 <LI align="justify">
 <FONT size="+1"><font color="blue"><a href="https://en.wikipedia.org/wiki/Silvano_Martello" target="_blank"><font color="blue">
-Wikipedia</font></a> = 3</font></a></P>
+Wikipedia</font></a></font></a></P>
 </LI>
 
 </P>
 </LI>
 <LI align="justify">
 <FONT size="+1"><font color="blue"><a href="https://it.wikipedia.org/wiki/Silvano_Martello" target="_blank"><font color="blue">
-Wikipedia (Italian)</font></a> = 3</font></a></P>
+Wikipedia (Italian)</font></a>
 </LI>
 
 <LI
