--- a/index.html
+++ b/index.html
@@ -759,6 +759,8 @@ Wikipedia page (Italian)</font></a>
 ></B>
 <DIV class="Part">
 
+ </font>
+ 
  <P
  align="justify"
 >[222] F Petropoulos, ..., S. Martello et al. (2024). Operational Research: methods and applications.
