--- a/index.html
+++ b/index.html
@@ -693,14 +693,14 @@ Top H-Index For Scientists in Italy</a>
 </LI>
 
 <LI align="justify">
-<FONT size="+1"><a href="http://en.wikipedia.org/wiki/G-index" target="_blank"><font color="blue">i10-index</font></a>
+<FONT size="+1"><a href="https://link.springer.com/article/10.1007/s11192-020-03831-9" target="_blank"><font color="blue">i-10 index</font></a>
 <font color="blue"> = 124</font> (computed by
 <a href="http://scholar.google.com/citations?hl=en&user=o4a20zsAAAAJ&view_op=list_works" target="_blank">Google Scholar</a>).
 </P>
 </LI>
 
 <LI align="justify">
-<FONT size="+1"><a href="http://en.wikipedia.org/wiki/G-index" target="_blank"><font color="blue">i100-index</font></a>
+<FONT size="+1"><a href="https://link.springer.com/article/10.1007/s11192-020-03831-9" target="_blank"><font color="blue">i-100 index</font></a>
 <font color="blue"> = 47</font> (computed by
 <a href="http://scholar.google.com/citations?hl=en&user=o4a20zsAAAAJ&view_op=list_works" target="_blank">Google Scholar</a>).
 </P>
@@ -708,7 +708,7 @@ Top H-Index For Scientists in Italy</a>
 
 
 <LI align="justify">
-<FONT size="+1"><a href="http://en.wikipedia.org/wiki/G-index" target="_blank"><font color="blue">i1000-index</font></a>
+<FONT size="+1"><a href="https://link.springer.com/article/10.1007/s11192-020-03831-9" target="_blank"><font color="blue">i-1000 index</font></a>
 <font color="blue"> = 3</font> (computed by
 <a href="http://scholar.google.com/citations?hl=en&user=o4a20zsAAAAJ&view_op=list_works" target="_blank">Google Scholar</a>).
 </P>
