--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@ Erd&#337;s number</font></a> = 3</font> (via Dominique de Werra and Pavol Hell)<
 </LI>
 <LI align="justify">
 <FONT size="+1"><font color="blue"><a href="https://en.wikipedia.org/wiki/Silvano_Martello" target="_blank"><font color="blue">
-Wikipedia page</font></a></font></a></P>
+Wikipedia</font></a> page</font></a></P>
 </LI>
 
 </P>
