--- a/index.html
+++ b/index.html
@@ -747,6 +747,13 @@ Wikipedia</font></a> page</font></a></P>
 
 </P>
 </LI>
+<LI align="justify">
+<FONT size="+1"><font color="blue"><a href="https://en.wikipedia.org/wiki/Silvano_Martello" target="_blank"><font color="blue">
+Wikipedia</font></a> page</font></a></P>
+</LI>
+
+</P>
+</LI>
 <LI
  align="justify"
 ><FONT size="+1"><font color="red"><B>Selected publications 1977&ndash;</B></font> </LI
