--- a/index.html
+++ b/index.html
@@ -748,8 +748,8 @@ Wikipedia</font></a> page</font></a></P>
 </P>
 </LI>
 <LI align="justify">
-<FONT size="+1"><font color="blue"><a href="https://en.wikipedia.org/wiki/Silvano_Martello" target="_blank"><font color="blue">
-Wikipedia</font></a> page</font></a></P>
+<FONT size="+1"><font color="blue"><a href="https://it.wikipedia.org/wiki/Silvano_Martello" target="_blank"><font color="blue">
+Wikipedia</font></a> page (Italian)</font></a></P>
 </LI>
 
 </P>
