--- a/index.html
+++ b/index.html
@@ -763,19 +763,25 @@ Wikipedia</font></a> page (Italian)</font></a></P>
  
  <P
  align="justify"
->[221] F Petropoulos, ..., S. Martello et al. (2024). Operational Research: methods and applications.
+>[222] F Petropoulos, ..., S. Martello et al. (2024). Operational Research: methods and applications.
 <I>Journal of the Operational Research Society</I> 75, 423-617. 
 </P>
 
  <P
  align="justify"
->[220] Y. Crama, M. Grabisch, S. Martello (2024). 21 volumes for the 21st century.
+>[221] Y. Crama, M. Grabisch, S. Martello (2024). 21 volumes for the 21st century.
 <I>4OR-A Quarterly Journal of Operations Research</I> 22, 1-16. 
 </P>
 
  <P
  align="justify"
->[219] S. Martello (2024). <I>Ricerca Operativa</I>  (III Ed.), Esculapio, Bologna, x + 304 pages.
+>[220] S. Martello (2024). <I>Ricerca Operativa</I>  (III Ed.), Esculapio, Bologna, x + 304 pages.
+</P>
+
+ <P
+ align="justify"
+>[219] A.A. Ajuso, L. Escudero, S. Martello (2023). Emerging applications, models and algorithms in combinatorial optimization.
+<I>Discrete Applied Mathematics</I> 335, 1-3.
 </P>
 
 <P
@@ -786,8 +792,8 @@ Wikipedia</font></a> page (Italian)</font></a></P>
 
 <P
  align="justify"
->[217] A.A. Ajuso, L. Escudero, S. Martello (2023). Emerging applications, models and algorithms in combinatorial optimization.
-<I>Discrete Applied Mathematics</I> 335, 1-3.
+>[217] A.A. Ajuso, L. Escudero, S. Martello (2023). <I> Special Issue: Emerging applications, models and algorithms in combinatorial optimization.<I>
+<I>Discrete Applied Mathematics</I> 335, 1-146.
 </P>
 
 <P
