--- a/index.html
+++ b/index.html
@@ -576,6 +576,15 @@ Boston, 1999 (co-edited with S. Voss, I.H. Osman and C.Roucairol), xii + 511 pag
 <I>Journal of Combinatorial Optimization</I> 42, 2021 (with J. Gauci) </P
 </P
 ></LI>
+
+ <LI
+ align="justify"
+>
+<a href="https://www.sciencedirect.com/journal/discrete-applied-mathematics/vol/335/suppl/C" target="_blank">
+<FONT size="+1">Emerging applications, models and algorithms in combinatorial optimization</a>,
+<I>Discrete Applied Mathematics</I> 335, 2023 (with A. Alonso-Ayuso and L. Escudero) </P
+</P
+></LI>
 </UL>
 
 <P
@@ -780,7 +789,7 @@ Wikipedia</font></a> page (Italian)</font></a></P>
 
  <P
  align="justify"
->[219] A.A. Ajuso, L. Escudero, S. Martello (2023). Emerging applications, models and algorithms in combinatorial optimization.
+>[219] A. Alonso-Ajuso, L. Escudero, S. Martello (2023). Emerging applications, models and algorithms in combinatorial optimization.
 <I>Discrete Applied Mathematics</I> 335, 1-3.
 </P>
 
@@ -792,7 +801,7 @@ Wikipedia</font></a> page (Italian)</font></a></P>
 
 <P
  align="justify"
->[217] A.A. Ajuso, L. Escudero, S. Martello (2023). <I> Special Issue: Emerging applications, models and algorithms in combinatorial optimization.<I>
+>[217] A. Alonso-Ajuso, L. Escudero, S. Martello (2023). <I> Special Issue: Emerging applications, models and algorithms in combinatorial optimization.<I>
 <I>Discrete Applied Mathematics</I> 335, 1-146.
 </P>
 
@@ -830,7 +839,6 @@ library, <I>Optimization Letters</I> 16,471-480.
 >[211] Y. Crama, M. Grabisch, S. Martello (2022). Sixty-one surveys in operations research.
 <I>Annals of Operations Research</I> 314, 5&ndash;13.
 </P>
-
 
 <P
  align="justify"
