--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@ Wikipedia</font></a> page (Italian)</font></a></P>
 
 <P
  align="justify"
->[217] A. Alonso-Ajuso, L. Escudero, S. Martello (2023). <I> Special Issue: Emerging applications, models and algorithms in combinatorial optimization.<I>
+>[217] A. Alonso-Ajuso, L. Escudero, S. Martello (2023). <I> Special Issue: Emerging applications, models and algorithms in combinatorial optimization.</I>
 <I>Discrete Applied Mathematics</I> 335, 1-146.
 </P>
 
