--- a/didattic.html
+++ b/didattic.html
@@ -86,7 +86,7 @@ gli orali di Mercoledi' 8 Febbraio si terranno regolarmente.
 
 <td bgcolor="#FFFFFF" valign="top" width="200">
       <a href="http://www.editrice-esculapio.com/martello-ricerca-operativa/" target="_blank">
-      <img border="0" src="front_Pagina_1.jpg" width="200" height="300"> </img></a>
+      <img border="0" src="RicercaOperativa2024.jpg" width="200" height="300"> </img></a>
 </td>
  </tr>
 
